# tflowclient

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml  codeql.yml  lint_and_test.yml  python-publish.yml
src/tflowclient/: __init__.py  cdp_flow.py  conf.py  demo_flow.py  flow.py  logs_gateway.py  observer.py  ui.py
src/tflowclient/entrypoints/: cdp.py  demo.py  dumppalette.py
tests/: test_cdp_flow.py  test_conf.py  test_flow.py  test_logs_gateway.py
